sites/all/themes/asb/sass/asb.scss
// Base:

@import "base";
@import "type";
@import "util";
@import "modals";

html, body {
  min-height : 100%;
  width: 100%; 
}
html, p {
  @include body-text;
}

.state {
  @include header-style($color: $funds, $family: $font-body, $size: $base-font-size)
}

.status-info h6 {
  display: inline-block;
  margin-bottom: 0;
}

div.messages { margin: 1em 0 0 0; padding-top: 1em; }

.admin-menu-icon.expandable { 
  img { width: 16px; }
}

body {
  header#header {
    position: relative;
    z-index: 10;
    height: 76px;
    h1#site-name {
      width: 428px;
      display: block;
      margin: 0 auto;
      a{
        display: block;
        height: 76px;
        text-indent: -9000px;
        overflow: hidden;
        text-align: left;
        background-repeat: no-repeat;
      }
    }
    section#navigation{
        background-color: $backdrop;
    }
  }
}

#page:before {
  content: " ";
  position: absolute;
  // left: -13px;
  width: 100%;
  height: 75px;
  z-index: 10;
  background: url( ../images/header-fringe.png ) repeat-x bottom center;    
}

// //////////////////////
// Search filters region
// .region-search
//
.region-search {
  overflow: hidden;
  background: $panel;
  padding: 1em 0 2em 0;
  @include transition-property(padding,height);
  @include transition-duration(.5s);
  @include transition-timing-function(ease-in-out);
  @include zigzag-border($panel, $even-backdrop);
  height: 120px;
  &.atrest {
    @include transition-duration(0);  
  }
  &.hidden, &.atrest { height: 0px; padding: 0 }
  // &.active { height: auto; }
}

.not-front.page-node {
  .region-search {
    background-color: $panel;
    background-image: none;
    border-bottom: 1px #dedede solid;
  }
}

#main { 
  position: relative;
  top: -0.425em;
}

#main #content .wrapper{
  section.content {
    padding: 0 10px;
  }
}

// inside pages
#name-and-slogan h1#site-name {
  height: 76px;
  a {
    background-image: url('../images/logo.png?1376927784');
    background-position: bottom left;
    height: 76px;
    z-index: 10;
  }

}



#content>article {

  &>header {

    background-color: $panel;
    padding: 1em 0 1em 0;
    min-height: 120px;

    h1#page-title {
//    @include zen-float(left);
      padding: 0;
    }
    section.methods {
      // @include zen-float(right);
      // margin-top: 28px;
    }
    section.content {
      border-right: {
        @include standard-border($style: dashed, $width: 2px);
      }
    }

  }

}


// //////////////////////////
//
// homepage style
//

.front{
  header#header {
    height: 172px;
  }
  #name-and-slogan {
    h1#site-name {
      width: 428px;
      a{
        background-image: url('../images/logo-home.png?1376927784');
        background-position: top left;
      }
    }
    h2#what-is-an-action-switchboard {
      margin: 0;
      a {
        display: block;
        height: 125px;
        width: 428px;
        @include hide-text;
        background-image: url('../images/logo-home.png?1376927784');
        background-position: bottom center;
      }
    }

  }
}

footer#footer {
  background: $backdrop; 
  .content {
  }
}

$headers: sprite-map("headers/*.png", $position: -4px);
@import "headers/*.png";
@include all-headers-sprites;

.scheme-collection {
  h2.block-title {
    margin-top: 15px;
    padding-left: 50px;
    margin-bottom: 4px;
  }

  #block-views-scheme-overview-block-1 {
    h2.block-title {
      @extend .headers-added;
      background-position: sprite-position( $headers, added, 0, -2px);
    }
  }
  #block-views-scheme-overview-block-2 {
    h2.block-title {
      @extend .headers-popular;
      background-position: sprite-position( $headers, popular, 0, -2px);
    }
  }
  #block-views-scheme-overview-block-3 {
    h2.block-title {
      @extend .headers-completed;
      background-position: sprite-position( $headers, completed, 0, -2px);
    }
  }
}


// ////////////////////////////
// Icons
// search nav item

#nav-find {
  color: #fff;
  cursor: pointer;
  @include font-icon-base($family:"entypo", $font-size: 1.25em, $margin: 0em, $width: .3em);
  @extend %entypo-search;
  &:before {
    position: absolute;
    width: 48px;
    margin-top: -2px;
    content: "\1F50D";
    text-align: right;
  }
}

.field-location {
  @include font-icon-base($family:"entypo", $font-size: 1em, $margin: .25em 0 0 0, $width: .3em);
  @extend %entypo-location;
  color: $text-color;
  &:before{
    text-align: left;
    line-height: .875;
  }
}
.status-info a.icon {
  @extend %entypo-pencil;
  color: $text-color;
}

ul.tabs-primary {
  li {
    a {
      @include font-icon-base($family:"entypo", $font-size: 1em, $margin: 0.1em, $width: .5em);
    }
    &.ctools-use-ajax a{ 
      @extend %entypo-megaphone;
    }
    &:first-child a{
      @extend %entypo-rss;
    }
  }
}

section.content,
article.comment,
.scheme-leader-contact,
.status-info  {
  a {
      @include font-icon-base($family:"entypo", $font-size: 1.65em, $margin: 0.1em, $width: .5em);
      color: $text-color;
      text-align: left;
      &.edit { @extend %entypo-pencil; }
      &:after {
        line-height: 1.2em;
      }
    // @include replace-text();
  }
  ul.links.inline li {
    &.comment-delete a{ @extend %entypo-cancel; }
    &.comment-edit a { @extend %entypo-pencil; }
    &.comment-reply a { @extend %entypo-reply; }
    &.comment-add a { @extend %entypo-comment; }
  }
  
  a.contact-me { 
    @extend %entypo-mail;
    &:before {}
  }
}

aside.scheme-meta {
  h6 {
    padding: 0;
    margin: 0;
  }
}

//Lists
ul#ui-button,
ul.tags {
  margin: 0;
  padding: 0;
  li {
    @include inline-list;
    @include zen-float;
    &:nth-child(2) {
      padding-left: 10px;
    }
  }
}
ul.tags li a {
  padding: 0;
}

aside {
  .item-list ul {
    margin: 0;
    padding: 0;
    li {
      list-style: none;
      padding: 5px 0;
      margin-right: 0;
      margin-left: 0;
      border-bottom: {
        @include standard-border;
      }
    }
  }
}

//Definition list
dl.issue dd {
  margin: 0;
  padding: 0;
}

//Buttons
a.ui-button,
.ui-button a,
ul.ui-button li.ui-button a {
  @include button($color: $button-color-secondary, $font-family: $base-font-family, $transform: none);
  &:link,
  &:visited,
  &:hover {
    color: #fff;
  }
}

ul.tags {
  list-style:none;
  li {
    display: inline-block;
    a {
      display: block;
      padding: .25em .5em;
    }
  }
}

.not-front #header-image-strip { display: none }

.loading_spinner {
  @include load-spinner;
}

// ////////////////////////////
// User Profile
// 

.user-profile {

  header.user-profile-header {

    section.content {}
    aside {
      &.user-meta {
        padding-left: 10px;

        section {
          margin-top: 10px;
          &:first-child {
            margin-top: 0;
          }
          h6 {
            line-height: $base-line-height;
            margin: 0;
          }
          div {}
          ul {
            @mixin comma-delimited-list {
              @include inline-list;
               }
            }
            li {
              &:after {
                content: ", "; 
              }
              &:last-child {
                &:after {
                  content: ""; } 
                }
              &.last {
                &:after {
                  content: ""; 
                } 
              } 
            }
        }
      }

    }

  }

  section.main-content {

    aside.user-details {
      @include zen-float(left);
      width: 214px;
      .user-picture {
        img {
          width: 100%;
          height: auto;
          }
        }
      ul.user-contact {
        list-style: none;
        li {
          a {
            padding-right: 10px;
            padding-left: 10px;
            @include font-icon-base($family:"entypo-social", $font-size: 1.65em, $margin: 0.1em, $width: .5em);
            &.facebook {@extend %entypo-social-facebook;}
            &.twitter {@extend %entypo-social-twitter;}
            &.linkedin {@extend %entypo-social-linkedin;}
            &.user-contact { 
              @include font-icon-base($family:"entypo", $font-size: 1.65em, $margin: 0.1em, $width: .5em);
              @extend %entypo-mail; 
            }
          }
        }
      }  
    }
    div.user-bio {
      @include zen-float(right);
      width: 726px;
      padding-left: 20px;
    }
  }

}

